# automation-engine

./: .gitignore  .isort.cfg  Makefile  README.md  automation-engine.toml  example.py  mqtt-automate.example.toml  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
automation_engine/: __init__.py  config.py  engine.py  piston.py  py.typed  runner.py  version.py
automation_engine/mqtt/: __init__.py  wrapper.py
automation_engine/plugins/: __init__.py  hue.py  plugin.py  state.py
examples/: hue.py
mqtt_automate/: __init__.py  app.py  config.py  engine.py  hue.py  mqtt_automate.py  py.typed  version.py
mqtt_automate/mqtt/: wrapper.py
tests/: test_config.py  test_module.py
tests/data/configs/: invalid.toml  valid.toml
tests/mqtt/: test_topic.py  test_wrapper.py
tests/plugins/: test_state.py
