[tool.poetry]
name = "automation_engine"
version = "0.4.0a1"
description = "Automation Engine powered by MQTT"
authors = ["Dan Trickey <contact@trickey.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trickeydan/automation-engine"
homepage = "https://github.com/trickeydan/automation-engine"
documentation = "https://github.com/trickeydan/automation-engine"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
gmqtt = "^0.6.9"
pydantic = "^1.8.2"
toml = "^0.10.2"
hue2mqtt = { version = "^0.2.2", optional = true }

[tool.poetry.extras]
all = ["hue2mqtt"]
hue = ["hue2mqtt"]

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
types-toml = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
