[tool.poetry]
name = "automation_engine"
version = "0.5.0"
description = "Automation Engine powered by MQTT"
authors = ["Dan Trickey <contact@trickey.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trickeydan/automation-engine"
homepage = "https://github.com/trickeydan/automation-engine"
documentation = "https://github.com/trickeydan/automation-engine"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
gmqtt = "^0.6.10"
pydantic = "^1.9.2"
tomli = { version = "^2.0.1", python = "<=3.10" }
hue2mqtt = { version = "^0.4.0", optional = true }
prometheus-client = "^0.14.1"

[tool.poetry.extras]
all = ["hue2mqtt"]
hue = ["hue2mqtt"]

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
pytest-asyncio = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
